--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,5 @@ name: LousyNet-Hub-Utils
 version: '${project.version}'
 main: info.charlieward.lousynethubutils.LousyNet_Hub_Utils
 api-version: '1.17'
-author: 'LousyBoi'
+authors:
+  - LousyBoi
